--- a/SE_Visualizer/SESite/templates/base.html
+++ b/SE_Visualizer/SESite/templates/base.html
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'project_index' %}">Home</a>
+              <a class="nav-link" href="{% url 'inputPage' %}">Home</a>
             </li>
           </ul>
         </div>
