Added some bad graphs for breakdown of stuff but whatever for alladat

--- a/SE_Visualizer/SESite/templates/base.html
+++ b/SE_Visualizer/SESite/templates/base.html
@@ -12,6 +12,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="{% url 'inputPage' %}">Home</a>
             </li>
+              <li class="nav-item active">
+              <a class="nav-link" href="{% url 'breakdowns' %}">Graphs</a>
+            </li>
           </ul>
         </div>
     </div>
